# dat332-linear-algebra

./: .pdm.toml  pyproject.toml  worksheet1.ipynb
LinAlgCourse/intro/: linalg_picSVD.ipynb
