[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Camron Khan", email = "camron.khan@gmail.com"},
]
dependencies = [
    "numpy~=1.21",
    "matplotlib~=3.4",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
